adding title, h1 and a paragraph

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Git/GitHub 3: Remote</title>
   </head>
   <body>
-  
+    <h1>Dépôt distant</h1>
+    <p>le dépôt distant se nomme par défaut "origin".</p>
   </body>
 </html>
